Exercise/9-Ingress/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-vh-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: watch.ecom-store.com # add
    http: # add
      paths: # add
      - pathType: Prefix # add
        path: "/video" # add
        backend: # add
          service: # add
            name: video-service # add
            port: # add
              number: 8080 # add
  - host: apparels.ecom-store.com # add
    http: # add
      paths: # add
      - pathType: Prefix # add
        path: "/wear" # add
        backend: # add
          service: # add
            name: apparels-service # add
            port: # add
              number: 8080 # add
